--- a/translations/client-admin/public/locales/en/client-admin.json
+++ b/translations/client-admin/public/locales/en/client-admin.json
@@ -9,6 +9,30 @@
     "loading": "Loading ..."
   },
   "header": {
+    "signin": "Sign In",
     "signout": "Sign out"
+  },
+  "footer": {
+    "whatis": "What is Polis?",
+    "desc": "DigiFinland ja Sitra ovat tuoneet Suomeen avoimeen lähdekoodiin perustuvan Polis-verkkoalustan. Poliksen tarkoituksena on mahdollistaa suurien ryhmien osallistuminen rakentavaan mielipiteiden vaihtoon, valitun aihepiirin ympärillä.",
+    "provider": "Service provider",
+    "links": {
+      "privacy": "Privacy policy",
+      "info": "Information",
+      "source": "Sourcecode"
+    }
+  },
+  "signout": {
+    "signingout": "Signing Out"
+  },
+  "signin": {
+    "signin": "Sign In",
+    "signingin": "Signing in...",
+    "test_warning_title": "TEST ENVIROMENT",
+    "test_warning_text": "Use only for testing, do not share links.",
+    "email": "email",
+    "password": "password",
+    "forgot": "Forgot your password?",
+    "reset": "Reset Password"
   }
 }
